# plaidml-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
ci/travis/: install.sh  script.sh
examples/: test.rs
src/: lib.rs
